--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,6 @@
 {
-  "extends": [
-    "plugin:prettier/recommended",
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ],
-  "parser": "@babel/eslint-parser",
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module",
-    "requireConfigFile": false // 禁用 Babel 配置文件检查（可选）
-  },
-  "env": {
-    "browser": true,
-    "es6": true,
-    "node": true
-  },
   "rules": {
-    "prettier/prettier": "off",
-    "fittenfix/some-rule": "off"
+    "linebreak-style": "off"
   }
 }
+
